--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "randomstring": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
