--- a/package.json
+++ b/package.json
@@ -24,17 +24,20 @@
     "@nestjs/common": "^8.4.7",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.1",
     "@types/dotenv": "^8.2.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.1",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "randomstring": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.4.0",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
