--- a/.env
+++ b/.env
@@ -1,9 +1,4 @@
-DB_DIALECT=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=password
-DB_INSTANCE_NAME=ssa
-
-SALT_LEN=10
-PORT=4000
+PORT=4001
+JWT_SECRET=I@m$3cr37
+API_VERSION=v1
+VC_E_SECRET=I@m$3cr37
