--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ssa",
+  "name": "role-based-authentication",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Fahad Hussain",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -21,29 +21,34 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.4.7",
+    "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^8.0.1",
-    "@types/dotenv": "^8.2.0",
+    "@nestjs/swagger": "^5.1.4",
+    "@nestjs/typeorm": "^8.0.2",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5",
+    "mysql": "^2.18.1",
     "randomstring": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.7"
+    "rxjs": "^7.4.0",
+    "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.0.0",
+    "@types/randomstring": "^1.1.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
@@ -74,6 +79,9 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "engines": {
+      "node": "^16.0.0"
+    }
   }
 }
